[gd_scene load_steps=12 format=2]

[ext_resource path="res://sprite/player/eaint_spite.png" type="Texture" id=1]
[ext_resource path="res://src/actors/Camera2D.gd" type="Script" id=2]
[ext_resource path="res://src/actors/player_1.gd" type="Script" id=3]
[ext_resource path="res://sprite/player/Ladii_sprite.png" type="Texture" id=4]

[sub_resource type="AnimationNodeAnimation" id=5]
animation = "Ladii_idle"

[sub_resource type="AnimationNodeStateMachine" id=6]
states/Ladii_idle/node = SubResource( 5 )
states/Ladii_idle/position = Vector2( 262, 77 )
start_node = "Ladii_idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=7]

[sub_resource type="Animation" id=4]
resource_name = "Ladii_idle"
length = 0.668
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../sprite2:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 2,
"values": [ 1, 2, 3, 3 ]
}

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 56.4538, 61.4711 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 56.875, 63.4375 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 40.8333, 54.875 )

[node name="players" type="Node2D"]
position = Vector2( 570, 0 )

[node name="player_1" type="KinematicBody2D" parent="."]
position = Vector2( -2, 2 )
collision_mask = 8
script = ExtResource( 3 )
speed = Vector2( 300, 2000 )
gravity = 4000

[node name="sprite" type="Sprite" parent="player_1"]
position = Vector2( 35, -75 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 4 )
hframes = 4
frame = 3

[node name="AnimationTree" type="AnimationTree" parent="player_1/sprite"]
tree_root = SubResource( 6 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="player_1/sprite"]
anims/Ladii_idle = SubResource( 4 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="player_1"]
position = Vector2( 0, -50 )
scale = Vector2( 0.805969, 0.813359 )
shape = SubResource( 1 )

[node name="sprite2" type="Sprite" parent="player_1"]
position = Vector2( -13, -74 )
scale = Vector2( 0.87, 0.8 )
texture = ExtResource( 1 )
hframes = 4
frame = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_1"]
position = Vector2( 1.81899e-12, -52 )
scale = Vector2( 0.8, 0.8 )
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="player_1"]
position = Vector2( 12, -94 )
current = true
zoom = Vector2( 1.5, 1.5 )
limit_left = -175
limit_top = -710
limit_right = 7480
limit_bottom = 847
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 6.0
drag_margin_left = 0.15
drag_margin_top = 0.75
drag_margin_right = 0.11
editor_draw_limits = true
editor_draw_drag_margin = true
script = ExtResource( 2 )

[node name="ShiftTween" type="Tween" parent="player_1/Camera2D"]

[node name="enemyDetector" type="Area2D" parent="player_1"]
position = Vector2( 0, -2 )
scale = Vector2( 1.2, 1 )
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_1/enemyDetector"]
modulate = Color( 0.172549, 0.117647, 0.823529, 1 )
position = Vector2( 0.833328, -48.875 )
shape = SubResource( 3 )

[node name="BounceRaycasts" type="Node2D" parent="player_1"]
position = Vector2( 1, -47 )

[node name="RayCast2D" type="RayCast2D" parent="player_1/BounceRaycasts"]
position = Vector2( -2, 47 )
cast_to = Vector2( 0, 8 )
collision_mask = 16
collide_with_areas = true

[node name="RayCast2D2" type="RayCast2D" parent="player_1/BounceRaycasts"]
position = Vector2( -26, 47 )
cast_to = Vector2( 0, 8 )
collision_mask = 16
collide_with_areas = true

[node name="RayCast2D3" type="RayCast2D" parent="player_1/BounceRaycasts"]
position = Vector2( -48, 47 )
cast_to = Vector2( 0, 8 )
collision_mask = 16
collide_with_areas = true

[node name="RayCast2D4" type="RayCast2D" parent="player_1/BounceRaycasts"]
position = Vector2( 23, 47 )
cast_to = Vector2( 0, 8 )
collision_mask = 16
collide_with_areas = true

[node name="RayCast2D5" type="RayCast2D" parent="player_1/BounceRaycasts"]
position = Vector2( 44, 47 )
cast_to = Vector2( 0, 8 )
collision_mask = 16
collide_with_areas = true

[connection signal="grounded_updated" from="player_1" to="player_1/Camera2D" method="_on_player_1_grounded_updated"]
[connection signal="area_entered" from="player_1/enemyDetector" to="player_1" method="_on_enemyDetector_area_entered"]
[connection signal="body_entered" from="player_1/enemyDetector" to="player_1" method="_on_enemyDetector_body_entered"]
